yamls/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnetmvcdeployment
  namespace: dotnet
spec:
  selector:
    matchLabels:
      name: podkoname
  replicas: 1
  template:
    metadata:
      labels:
        name: podkoname
    spec:
      containers:
      - name: dotnetmvccontainer
        image: rajanup77/dotnet-mvc
        ports:
        - containerPort: 5206
        resources:
          requests:
            cpu: "500m"
            memory: "512Mi"
          limits:
            cpu: "1500m"
            memory: "1024Mi"
