yamls/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-svc
  namespace: dotnet
spec:
  selector:
    app: dotnet
  ports:
    - name: http
      protocol: TCP
      port: 5206
      targetPort: 5206
