yamls/svc-nodeport.yml
kind: Service
apiVersion: v1
metadata:
  name: service-nodeport
spec:
  selector:
    name: podkoname
  ports:
  - protocol: TCP
    port: 5206
    nodePort: 32300
  type: NodePort
