yamls/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dotnet-ingress
  namespace: dotnet
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: dotnet.ad.irdlab.com
      http:
        paths:
          - backend:
              service:
                name: dotnet-svc
                port:
                  name: https
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - dotnet.ad.irdlab.com
      secretName: dotnet-tls
